src/test/resources/invalid_tests/InvalidIOShape2.cnna
architecture InvalidIOShape2{
    def input Q(-oo:+oo)^{10.5} in
    def output Q(0:1)^{-10} out

    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=10) ->
    Softmax() ->
    out
}